--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
             android:name=".presentation.view.map.SearchActivity"
             android:exported="false" />
         <activity
-            android:name=".presentation.view.login.LoginActivity"
+            android:name=".presentation.view.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -43,7 +43,9 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".presentation.view.MainActivity" />
+        <activity
+            android:name=".presentation.view.login.LoginActivity"
+            />
         <activity
             android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
             android:exported="true">
