--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,9 +6,11 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
-    <uses-permission android:name="android.permission.DIAL_PHONE" /> <!-- 이미지 업로드 권한 -->
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.DIAL_PHONE" />
+
+    <!--이미지 업로드 권한-->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
         android:name=".EnergyApp"
@@ -23,12 +25,10 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-
-            android:name=".presentation.view.list.ListInformationActivity"
-            android:exported="false" />
-        <activity
             android:name=".presentation.view.map.SearchActivity"
             android:exported="false" />
+
+        <activity android:name=".presentation.view.list.ListInformationActivity"></activity>
         <activity
             android:name=".presentation.view.MainActivity"
             android:exported="true">
@@ -38,32 +38,20 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".presentation.view.community.CommunityWritingActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-=======
-            android:name=".presentation.view.SplashActivity"
-            android:exported="true">
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
 
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
-    </activity>
         <activity
-            android:name=".presentation.view.MainActivity" />
-        <activity
-            android:name=".presentation.view.map.SearchActivity" />
-        <activity
-            android:name=".presentation.view.community.CommunityWritingActivity" />
-
-        <activity android:name=".presentation.view.login.LoginActivity" />
+            android:name=".presentation.view.login.LoginActivity"
+            />
         <activity
             android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
             android:exported="true">
@@ -85,11 +73,4 @@
             android:value="${KAKAO_NATIVE_KEY}" />
     </application>
 
-
 </manifest>
-=======
-    <queries>
-        <package android:name="net.daum.android.map"/>
-    </queries>
-</manifest>
-
