[Add] #27 ui 및 파일 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,10 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
+    <queries>
+        <package android:name="net.daum.android.map" />
+    </queries>
+
     <application
         android:name=".EnergyApp"
         android:allowBackup="true"
@@ -23,23 +27,21 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".presentation.view.mypage.BlockActivity"
+            android:exported="false" />
+        <activity
             android:name=".presentation.view.SplashActivity"
             android:exported="true">
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
-    </activity>
-        <activity
-            android:name=".presentation.view.MainActivity" />
-        <activity
-            android:name=".presentation.view.map.SearchActivity" />
-
-        <activity android:name=".presentation.view.list.ListInformationActivity"></activity>
-
-        <activity
-            android:name=".presentation.view.community.CommunityWritingActivity" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".presentation.view.MainActivity" />
+        <activity android:name=".presentation.view.map.SearchActivity" />
+        <activity android:name=".presentation.view.list.ListInformationActivity" />
+        <activity android:name=".presentation.view.community.CommunityWritingActivity" />
         <activity android:name=".presentation.view.login.LoginActivity" />
         <activity
             android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
@@ -62,7 +64,4 @@
             android:value="${KAKAO_NATIVE_KEY}" />
     </application>
 
-    <queries>
-        <package android:name="net.daum.android.map"/>
-    </queries>
 </manifest>
