--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,7 @@
         <activity android:name=".presentation.view.MainActivity" />
         <activity android:name=".presentation.view.map.SearchActivity" />
         <activity android:name=".presentation.view.list.ListInformationActivity" />
+        <activity android:name=".presentation.view.note.NoteLiveChatActivity" />
         <activity android:name=".presentation.view.community.CommunityWritingActivity" />
         <activity android:name=".presentation.view.login.LoginActivity" />
         <activity
