[Feat] 커뮤니티 알림창 구현

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,6 +52,9 @@
             android:name=".presentation.view.community.CommunityDetailActivity" />
 
         <activity
+            android:name=".presentation.view.community.NotificationActivity" />
+
+        <activity
             android:name=".presentation.view.login.LoginActivity"
             />
         <activity
