[Fix] Merge 충돌 수정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,9 +45,12 @@
 
         <activity
             android:name=".presentation.view.community.CommunityWritingActivity"
-            android:exported="true" >
+            android:exported="true" />
+
+        <activity
             android:name=".presentation.view.mypage.BlockActivity"
             android:exported="false" />
+
         <activity
             android:name=".presentation.view.SplashActivity"
             android:exported="true">
@@ -64,15 +67,10 @@
             android:name=".presentation.view.community.NotificationActivity" />
 
         <activity
-            android:name=".presentation.view.login.LoginActivity"
-            />
-        <activity android:name=".presentation.view.MainActivity" />
-        <activity android:name=".presentation.view.map.SearchActivity" />
-        <activity android:name=".presentation.view.list.ListInformationActivity" />
+            android:name=".presentation.view.login.LoginActivity" />
+
         <activity android:name=".presentation.view.note.NoteLiveChatActivity" />
         <activity android:name=".presentation.view.note.NoteUserProfileActivity" />
-        <activity android:name=".presentation.view.community.CommunityWritingActivity" />
-        <activity android:name=".presentation.view.login.LoginActivity" />
         <activity
             android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
             android:exported="true">
