[Fix] 스와이프 기능 수정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -67,6 +67,9 @@
             android:name=".presentation.view.community.NotificationActivity" />
 
         <activity
+            android:name=".presentation.view.community.CommentEditActivity" />
+
+        <activity
             android:name=".presentation.view.login.LoginActivity" />
 
         <activity android:name=".presentation.view.note.NoteLiveChatActivity" />
