--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,11 +6,9 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
-    <uses-permission android:name="android.permission.DIAL_PHONE" />
-
-    <!--이미지 업로드 권한-->
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.DIAL_PHONE" /> <!-- 이미지 업로드 권한 -->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <queries>
         <package android:name="net.daum.android.map" />
@@ -29,28 +27,20 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".presentation.view.list.ListAddReviewActivity"
+            android:exported="false" />
+        <activity
             android:name=".presentation.view.map.SearchActivity"
             android:exported="false" />
-
-        <activity android:name=".presentation.view.list.ListInformationActivity"></activity>
+        <activity android:name=".presentation.view.list.ListInformationActivity" />
         <activity
-            android:name=".presentation.view.MainActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-
+            android:name=".presentation.view.MainActivity" />
         <activity
             android:name=".presentation.view.community.CommunityWritingActivity"
             android:exported="true" />
-
         <activity
             android:name=".presentation.view.mypage.BlockActivity"
             android:exported="false" />
-
         <activity
             android:name=".presentation.view.SplashActivity"
             android:exported="true">
@@ -60,18 +50,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".presentation.view.community.CommunityDetailActivity" />
-
-        <activity
-            android:name=".presentation.view.community.NotificationActivity" />
-
-        <activity
-            android:name=".presentation.view.community.CommentEditActivity" />
-
-        <activity
-            android:name=".presentation.view.login.LoginActivity" />
-
+        <activity android:name=".presentation.view.community.CommunityDetailActivity" />
+        <activity android:name=".presentation.view.community.NotificationActivity" />
+        <activity android:name=".presentation.view.community.CommentEditActivity" />
+        <activity android:name=".presentation.view.login.LoginActivity" />
         <activity android:name=".presentation.view.note.NoteLiveChatActivity" />
         <activity android:name=".presentation.view.note.NoteUserProfileActivity" />
         <activity
